Fixed an issue where the leaflet component would collapse

--- a/src/styles/aui/_aui.leaflet.scss
+++ b/src/styles/aui/_aui.leaflet.scss
@@ -6,6 +6,7 @@
 .o-leaflet {
   border: 1px solid $grey;
   display: flex;
+  height: 1px;
   min-height: 600px;
   width: 100%;
 
